@@ -5,6 +5,7 @@ v2.4.0 (2019.10.xx)
   - Refactor recordings database table to key on auto-generated recording identifier(s) and improve query performance
   - Improve performance of Recorded TV last played (resume) position operations
   - Display prompt indicating that an individual episode timer cannot be removed from a series recording rule
+  - Trigger an automatic recording discovery to occur 15 seconds after a new recording rule has been added
 
 v2.3.1 (2019.09.30)
   - Fix potential for a race condition in background task scheduler when synchronously executing a task
